Show title in favor of close button on inactive tabs

For inactive tabs, we prefer showing favicon, then alert button,
then close button. When there is no favicon or alert button, we need
to show title first instead of the close button, so the tab can be
identified.

BUG=826750

Change-Id: I5148e13ce8faceff73ec73fede9d319422595685
Reviewed-on: https://chromium-review.googlesource.com/996809
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Commit-Queue: Wei Li <weili@chromium.org>
Cr-Commit-Position: refs/heads/master@{#548456}
Former-commit-id: 2c622366bc98d65ee93cfe0b8a57a95cd9b8df39